# LLM-Security-Pipeline-2

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  Dockerfile  MODEL_CARD.md  Makefile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  something.yml  stage_a_manifest.json
.github/workflows/: ci.yml
config/: config.yaml
data/raw/: checksums.json
hf_space/: app.py  requirements.txt
models/: stage_a_manifest.json
models/manifests/: stage_a_manifest.json
reports/: blog_outline.md  reddit_post.md  results.json
scripts/: block_dangerous.ps1  export_onnx_local.py  kaggle_train.ipynb  merge_adapter.py  quantize_onnx.py  run_evaluate.py
src/: __init__.py  config.py  exceptions.py  jailbreak_detector.py  logger.py
src/api/: app.py  feedback.py  schemas.py  stream.py
src/baseline/: infer_baseline.py  train_baseline.py
src/data/: collect.py  pipeline.py  schema.py  validate.py
src/evaluation/: evaluate.py  redteam.py
src/hybrid/: explain.py  normalize.py  pipeline.py  policy_gate.py  similarity.py  stage_a.py  stage_b.py
src/training/: __init__.py  calibrate.py  export_onnx.py  manifest.py  train.py
src/ui/: gradio_app.py  theme.py
tests/: test_api_contracts.py  test_baseline.py  test_collect.py  test_data_pipeline.py  test_data_schema.py  test_docs.py  test_evaluation.py  test_export_onnx.py  test_gradio.py  test_hybrid_policy.py  test_integration.py  test_manifest.py  test_public_api.py  test_redteam.py  test_scaffold.py  test_training.py
