[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "p1-hybrid-jailbreak-detector"
version = "0.1.0"
description = "Hybrid LLM jailbreak and prompt injection detector. ModernBERT + LoRA + perplexity gate + FAISS similarity search."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["llm", "jailbreak", "prompt injection", "safety", "moderation", "nlp", "transformers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.29",
    "sse-starlette>=2.1",
    "slowapi>=0.1.9",
    "prometheus-fastapi-instrumentator>=7.0",
    "psutil>=5.9",
    "together>=1.3",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/Priyrajsinh/Hybrid-LLM-Jailbreak-Detector"
"HF Space" = "https://huggingface.co/spaces/Priyrajsinh/hybrid-jailbreak-detector"
"Bug Tracker" = "https://github.com/Priyrajsinh/Hybrid-LLM-Jailbreak-Detector/issues"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "sklearn.*",
    "mlflow.*",
    "faiss",
    "sentence_transformers.*",
    "captum.*",
    "transformers.*",
    "torch.*",
    "peft",
    "peft.*",
    "weave",
    "optimum",
    "optimum.*",
    "onnxruntime",
    "onnxruntime.*",
    "pandas",
    "pandas.*",
    "matplotlib",
    "matplotlib.*",
    "slowapi",
    "slowapi.*",
    "sse_starlette",
    "sse_starlette.*",
    "prometheus_fastapi_instrumentator",
    "prometheus_fastapi_instrumentator.*",
    "together",
    "together.*",
    "gradio",
    "gradio.*",
    "plotly",
    "plotly.*",
    "yaml",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "error::DeprecationWarning",
    "ignore::DeprecationWarning:gradio",
    "ignore::DeprecationWarning:httpx",
    "ignore::DeprecationWarning:anyio",
    "ignore::DeprecationWarning:starlette",
]

[tool.coverage.run]
omit = [
    "src/training/*",
    "src/evaluation/*",
    "src/baseline/*",
    "src/ui/gradio_app.py",
    "src/api/stream.py",
    "hf_space/*",
]
